# nitinnat.github.io

./: .env.example  .env.r2.example  .gitignore  404.html  EXTERNAL_ASSETS_MIGRATION_PLAN.md  GEMINI.md  Gemfile  IMPLEMENTATION_LOG.md  PHOTOGRAPHY_DESIGN.md  README.md  TECHNICAL_DESIGN.md  TIMELINE_DESIGN.md  _config.yml  aboutme.md  blog.html  experience.md  feed.xml  gallery.md  index.html  mdx-components.tsx  next.config.ts  package-lock.json  package.json  photography.md  photographyv2.html  photographyv2.md  pyproject.toml  sitemap.xml  watermark_images.rb
2023-10-26-publications/: index.html
2023-10-28-university-at-buffalo/: index.html
GEMINI/: index.html
_data/: education.yml
_experiences/: clarifai.md  fidelity-investments.md  indian-institute-of-science.md  o9-solutions.md  university-at-buffalo.md
_includes/: footer-scripts.html  head.html  header.html  nav.html
_layouts/: base.html  experience.html  gallery.html  onepage.html  photographyv2.html  place.html
_places/: oregon.md  san_francisco.md
_posts/: 2023-10-26-publications.md  2023-10-27-o9-solutions.md  2023-10-28-university-at-buffalo.md  2023-10-29-clarifai.md  2023-10-30-fidelity-investments.md  2023-10-31-indian-institute-of-science.md
_projects/: sample-project.md
aboutme/: index.html
blog/: index.html
content/: photos-metadata.json  skills.md
css/: main-minimal.css  main.css  modern.css
docs/: IMPLEMENTATION_LOG.md  R2_SETUP_INSTRUCTIONS.md  photos_tab.md
experience/: index.html
js/: main.js
photography/: index.html
photographyv2/: index.html
public/: CNAME
(+75 files in other folders)
